# hkventil

./: CMakeLists.txt  FButton.qml  FCurveSettings.qml  FFormula.qml  FGButton.qml  FGCheckBox.qml  FGSlider.qml  FGSpinBox.qml  FSpinBox.qml  HeatCurve.qml  HeatPage.qml  PumpPage.qml  ResultPage.qml  ValvePage.qml  classheatcalculator.cpp  classheatcalculator.h  images.qrc  main.cpp  main.qml
resources/: iconapp.rc
